crates/engram-cli/tests/snapshots/renderer/engram_cli__output__tests__memory_minimal__json.snap
---
source: crates/engram-cli/src/output.rs
expression: rendered
---
--- stdout ---
{
  "id": "550e8400-e29b-41d4-a716-446655440000",
  "type": "decision",
  "epistemic": "decision",
  "summary": "Test summary",
  "content": "Test content",
  "physical": [],
  "logical": [],
  "tags": [],
  "criticality": 0.8,
  "provenance": {
    "source": "human"
  },
  "confidence": 0.9,
  "supersedes": [],
  "status": "Active",
  "visibility": "Shared",
  "challenges": [],
  "created_at": "2026-01-02T03:04:05Z",
  "updated_at": "2026-01-02T03:04:05Z",
  "accessed_at": "2026-01-02T03:04:05Z"
}
--- stderr ---
