crates/engram-cli/tests/snapshots/renderer/engram_cli__output__tests__memory_minimal__plain.snap
---
source: crates/engram-cli/src/output.rs
expression: rendered
---
--- stdout ---
ID: 550e8400-e29b-41d4-a716-446655440000
Type: Decision
Summary: Test summary
Content: Test content
Criticality: 0.80
Confidence: 0.90
Status: Active
Visibility: Shared
--- stderr ---
